themes/leos-theme/css/custom.css
/* Core Stuff */
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    
}

@font-face {
    font-family: 'ubuntu_monobold';
    src: url('../fonts/ubuntumono-b-webfont.woff2') format('woff2'),
         url('../fonts/ubuntumono-b-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'ubuntu_monoregular';
    src: url('../fonts/ubuntumono-r-webfont.woff2') format('woff2'),
         url('../fonts/ubuntumono-r-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'ubuntulight';
    src: url('../fonts/ubuntu-l-webfont.woff2') format('woff2'),
         url('../fonts/ubuntu-l-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

body {
    font-size: 1rem;
    line-height: 1.7;
    color: #606d6e;
   /* background: #ffff00; */
   font-family: 'ubuntulight';
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #454B4D;
    font-family: 'ubuntulight';
}
p {
    font-family: 'ubuntulight';
}

a {
    color: #1F8CD6;
    color: #2f0923;
    text-decoration: none;
}

a:hover {
    color: #175E91;
    color: #2f0923;
}

pre {
    background: #F0F0F0;
    margin: 1rem 0;
    border-radius: 2px;
}

blockquote {
    border-left: 10px solid #eee;
    margin: 0;
    padding: 0 2rem;
}

.padding {
    padding: 3rem 1rem;
}

.left {
    float: left;
}

.right {
    float: right
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.text-left {
    text-align: left;
}

/* Content Styling */
.header .padding {
    padding: 1rem 0;
}

.header {
    background-color: #1F8DD6;
    background-color: #2f0923;
    color: #eee;
}

.header a {
    color: #fff;
}

.header .logo {
    font-size: 1.7rem;
    text-transform: uppercase;
    /* display: inline-block; */
    float: top;
    font-family: 'ubuntu_monobold';
    margin-top: -5px;
}

.footer {
    background-color: #eee;
}

.logo > .left {
    vertical-align: top;
    margin: auto;
}
#mainlogo {
    /* margin-top: -5px; */
    width: 57px;
    vertical-align: middle;
}
#logotext{
    display: inline-block;
    vertical-align: middle;
    font-family: 'ubuntulight';
}



/* Menu Settings */
.main-nav ul {
    /*float: right;*/
    
    text-align: center;
    text-align: right;
    letter-spacing: -1em;
    margin: 0;
    padding: 0;
    font-family: 'ubuntu_monoregular';
}

.main-nav ul li {
    display: inline-block;
    letter-spacing: normal;
}

.main-nav ul li a {
    position: relative;
    display: block;
    line-height: 45px;
    color: #fff;
    padding: 0 20px;
    white-space: nowrap;
}

.main-nav > ul > li > a {
    border-radius: 2px;
}

/*Active dropdown nav item */
.main-nav ul li:hover > a {
    background-color: #175E91;
    background-color: #7b175c;
}

/* Selected Dropdown nav item */
.main-nav ul li.selected > a {
    background-color: #fff;
    color: #175E91;
    color: #7b175c;
}

/* Dropdown CSS */
.main-nav ul li {position: relative;}

.main-nav ul li ul {
    position: absolute;
    background-color: #1F8DD6;
    min-width: 100%;
    text-align: left;
    z-index: 999;

    display: none;
}
.main-nav ul li ul li {
    display: block;
}

/* Dropdown CSS */
.main-nav ul li ul ul {
    left: 100%;
    top: 0;
}

/* Active on Hover */
.main-nav li:hover > ul {
    display: block;
}

/* Child Indicator */
.main-nav .has-children > a {
    padding-right: 30px;
}
.main-nav .has-children > a:after {
    font-family: FontAwesome;
    content: '\f107';
    position: absolute;
    display: inline-block;
    right: 8px;
    top: 0;
}

.main-nav .has-children .has-children > a:after {
    content: '\f105';
}

/* Utility Classes */
@media (min-width: 60rem) {
    .wrapper {
        margin: 0 auto;
        width: 60rem;
    }
    #hamburger{
        display: none;
    }
    
}
@media (min-width: 687px, max-width 60rem){
    #navigation-items{
        float: right;
        margin-top: 56px;
        margin-right: -50px;
        /* position: fixed; */
    }
    
}
@media (max-width: 60rem){

    pre{
        /* max-width: 100%; */
    }

    .wrapper img{
        width: 100%;
    }

    .hamburger-menu-hidden{
        display: none !important;
        position: relative;
    }
    .main-nav ul {
        margin-top: 9px;
        display: table-row;
        background-color: #2f0923;
        position: relative;
        /* margin-right: -30px; */
        z-index: 100;
        float: right;
        clear: right;
    }
    
    .main-nav {
        height: 40px;
        
    }
    #hamburger-container{
         float: right; 
         position: relative;
         margin-top: 0;
          /* text-align: right; */
    }
    .hamburger{
        /* padding-right: 15px; */
        /* padding-top: 8px; */
        /* height: 60px; */
        width: 100%;
        /* float: right; */
        /* position: relative; */
        /* margin-right: 0; */
        /* display: inline-block; */
    }
    .main-nav li {
        width: 100%;
        /* color: #2f0923 ; */
        
    }
    #sidebar{
        display: none;
    }
    /* .main-nav ul li a{
        color:#7b175c ;
    }
    .main-nav ul li.selected > a {
        background-color: #7b175c;
        color: #fff;
    }
    .main-nav ul li:hover > a {
        color: #fff;
    } */
}
video {
    max-width: 100%;
}
.service {
    max-width: 20rem;
    display: inline-block;
    vertical-align: text-top;
}
.services-wrapper .icon {
    font-size: 48pt;
    background-color:#2f0923;
    width: 80pt;
    height: 80pt;
    padding: 0;
    border-radius: 40pt;
    color: #fff;
    margin: 0 auto;
}
@keyframes drop-down{
    0% {
        color: #fff;
        transform: translateY(-30px);
    }
    100%{
        transform: translateY(0);
    }
}
@keyframes slide-left{
    0%{
        opacity: 0.5;;
        /* transform: translateX(-60px); */
    }
    33%{
        opacity: 0.5;
        /* transform: translateX(-60px); */
    }
    100%{
        opacity:1;
        /* transform: translateX(0); */
    }
}
.intro{
    animation: drop-down 1s ease-in;
}
.services{
    /* transform: translateX(-30px); */
}
.services{
    animation: slide-left 1.5s;
}
.work-content{
    /* display: inline-block; */
    text-align: left !important;
}
.text-left{
    text-align: left;
}
.portfolio-entry{
    max-width: 20rem;
    display: inline-block;
    vertical-align: text-top;
    padding-left: 1rem;
    padding-right: 1rem;
    width: 16rem;
    height: 16rem;
}
.social-media-item{
    display: inline-block;
    vertical-align: text-top;
}
.social-media-item .icon{
    font-size: 16pt;
}
.social-media-links{
    font-size: 18pt;
}
.entry{
    display: inline-block;
    padding: 1rem;
    width: 14rem;
    max-height: 23rem;
    
    /* border: 1px solid #cccccc; */
    /* border-radius: 2px; */
    margin: 0.2rem;
    /* margin-top: -1.5em; */
    /* box-shadow: 3px 3px 3px 0px #ccc; */
    border-bottom: 3px solid #999;
}
.entry:hover{
    background-color: #eee;
    opacity: 0.9;
    /* color: #fff; */
    border-bottom: 3px solid #000;
}
.entry:hover .title{
    /* color: #fff; */
}
.entry .title{
    width: 100%;
    min-height: 3em;
    line-height: 1.5em;
    padding: 0;
    margin: 0;
    overflow: hidden;
    border-bottom: 1px solid #ccc;
    vertical-align: bottom;
}
.entry .tags{
    min-height: 1.75em;
    font-style: italic;
}
.entry .info{
    min-height: 3em;
}
.portfolio-image, .project-image{
    /* margin-top: -4rem; */
    min-height: 12rem;
    background-size: 12rem;
    width: 12rem;
    height: 12rem;
    background-repeat: no-repeat;
    /* padding-top: 10rem; */
    /* padding-bottom: 10rem; */
    border: 1px solid rgba(0,0,0,0);
    /* border-bottom: 2px solid #2f0923; */
    border-radius: 5px;
}
.entry:hover .portfolio-image{
    border: 1px solid #2f0923 ;
}
.skills li{
    text-align: left;
}
.skills ul{
    padding-left: 5rem;
    padding-right: 5rem;
}

.blog-header{
    color: #2f0923;
    background-size: 100%;
    padding: 1rem;
    min-height: 270px;
    text-shadow: 1px 1px 1px #fff;
}
.blog-header h1{
    color: #2f0923
}

.force-normal-text {
    font-size: 11pt !important;
}

